创建初始化工程